form di ricerca

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -114,16 +114,28 @@
                     <div class="w3-col m12">
                         <div class="w3-card w3-round w3-white">
                             <div class="w3-container w3-padding intership">
-                                <h6 class="w3-opacity">Xenia S.p.A. offre tesi magistrali e tirocini in ambito sviluppo Java</h6>
-                                <p  class="w3-border w3-padding proposte-tirocinio">
-                                    Xenia S.p.A., azienda specializzata in servizi di accommodation alberghiera, hospitality
-                                    process, knowhow ed expertise nella travel industry con oltre venticinqe anni di attività,
-                                    offre a laureandi magistrali in informatica con buona esperienza di sviluppo delle tesi
-                                    di secondo livello, da integrare possibilmente con un periodo iniziale di tirocinio.
-                                    Il progetto di tesi prevede lo sviluppo di un'applicazione web modulare per l'analisi
-                                    di tracciati dati. In particolare, si dovrà da prima prototipare l'applicazione base
-                                    e quindi sviluppare un modulo di analisi di esempio da integrare in quest'ultima.
-                                </p>
+                                <h6 class="search-form"><button class="collapsible">Filtra le proposte di tirocinio</button>
+                                    <div class="content">
+                                      <p><form action="/action_page.php">
+                                        Parole chiave:<br>
+                                        <input type="text">
+                                        <br>
+                                        Nome Azienda:<br>
+                                        <input type="text">
+                                        <br>
+                                        Sede Tirocinio:<br>
+                                        <input type="text">
+                                        <br>
+                                        Durata minima del tirocinio:<br>
+                                        <input type="text">
+                                        <br>
+                                        Durata minima del tirocinio:<br>
+                                        <input type="text">
+                                        <br>
+                                        <br>
+                                        <input type="submit" value="Filtra">  <input type="submit" value="annulla">
+                                      </form> </p></h6>
+                                
                             </div>
                         </div>
                     </div>
