ritocchi al template ;)

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -22,9 +22,9 @@
                 onclick="openNav()">
                 <i class="fa fa-bars"></i>
             </a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large univaq-color">
+            <a href="#" class="w3-bar-item w3-button w3-hover-red w3-padding-large univaq-color">
                 <i class="fa fa-home w3-margin-right"></i>IntershipTutor</a>
-            <a href="#" class="w3-bar-item w3-button w3-right w3-hide-small w3-padding-large " title="Account Settings">
+            <a href="#" class="w3-bar-item w3-button w3-hover-red w3-right w3-hide-small w3-padding-large " title="Account Settings">
                 <i class="fa fa-user"></i>
                 Accedi
             </a>
@@ -33,9 +33,9 @@
 
     <!-- Navbar on small screens -->
     <div id="navDemo" class="w3-bar-block univaq-color w3-hide w3-hide-large w3-hide-medium w3-large">
-        <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 1</a><!--NON SO PERCHE SE TOLGO QUESTO NON APPARE ACCEDI-->
-        <a href="#" class="w3-bar-item w3-button w3-padding-large">Accedi</a>
-        <a href="./aziende-smartphone.html" class="w3-bar-item w3-button w3-padding-large">Aziende convenzionate</a>
+        <a href="#" class="w3-bar-item w3-button w3-hover-red w3-padding-large">Link 1</a><!--NON SO PERCHE SE TOLGO QUESTO NON APPARE ACCEDI-->
+        <a href="#" class="w3-bar-item w3-button w3-hover-red w3-padding-large">Accedi</a>
+        <a href="./aziende-smartphone.html" class="w3-bar-item w3-button w3-hover-red w3-padding-large">Aziende convenzionate</a>
         
     </div>
 
@@ -118,19 +118,19 @@
                                     <div class="content">
                                       <p><form action="/action_page.php">
                                         Parole chiave:<br>
-                                        <input type="text">
+                                        <input type="form">
                                         <br>
                                         Nome Azienda:<br>
-                                        <input type="text">
+                                        <input type="form">
                                         <br>
                                         Sede Tirocinio:<br>
-                                        <input type="text">
+                                        <input type="form">
+                                        <br>
+                                        Durata massima del tirocinio:<br>
+                                        <input type="form">
                                         <br>
                                         Durata minima del tirocinio:<br>
-                                        <input type="text">
-                                        <br>
-                                        Durata minima del tirocinio:<br>
-                                        <input type="text">
+                                        <input type="form">
                                         <br>
                                         <br>
                                         <input type="submit" value="Filtra">  <input type="submit" value="annulla">
