--- a/client/src/index.html
+++ b/client/src/index.html
@@ -62,8 +62,8 @@
                 <div class="w3-card w3-round w3-white">
                     <p class="aziende-convenzionate">Aziende convenzionate</p>
                     <div class="w3-container margin-bottom aziende">
-                        <div class="azienda">
-                            <h4 class="w3-center"><input type="text" name="search" placeholder="Search.."></h4>
+                        <div class="w3-center">
+                            <input type="text" name="search" placeholder="Cerca...">
                         </div>
                         <hr>
                         <div class="azienda">
@@ -114,28 +114,23 @@
                     <div class="w3-col m12">
                         <div class="w3-card w3-round w3-white">
                             <div class="w3-container w3-padding intership">
-                                <h6 class="search-form"><button class="collapsible">Filtra le proposte di tirocinio</button>
+                                <div class="search-form"><button class="collapsible">Filtra le proposte di tirocinio</button>
                                     <div class="content">
                                       <p><form action="/action_page.php">
-                                        Parole chiave:<br>
-                                        <input type="form">
-                                        <br>
-                                        Nome Azienda:<br>
-                                        <input type="form">
-                                        <br>
-                                        Sede Tirocinio:<br>
-                                        <input type="form">
-                                        <br>
-                                        Durata massima del tirocinio:<br>
-                                        <input type="form">
-                                        <br>
-                                        Durata minima del tirocinio:<br>
-                                        <input type="form">
-                                        <br>
-                                        <br>
-                                        <input type="submit" value="Filtra">  <input type="submit" value="annulla">
-                                      </form> </p></h6>
-                                
+                                        Azienda:<br />
+                                        <input /><br />
+                                        Sede:<br />
+                                        <input /><br />
+                                        Obiettivi:<br />
+                                        <input /><br />
+                                        Modalità:<br />
+                                        <input /><br />
+                                        Durata tirocinio:<br />
+                                        <input /><br />
+                                        <button>Cerca</button>  
+                                        <button>Annulla</button>
+                                      </form>
+                                 </div>
                             </div>
                         </div>
                     </div>
@@ -255,8 +250,9 @@
         <!-- Pagination -->
 
         <!-- End Page Container -->
+        </div>
     </div>
-    <br>
+    <br />
 
     <!-- Footer -->
     <footer class="w3-container univaq-color w3-padding-16">
