--- a/client/src/index.html
+++ b/client/src/index.html
@@ -44,12 +44,16 @@
         </div>
     </div>
 
-    <!-- Title container -->
+    
     
 
     <!-- Page Container -->
     <div class="w3-container w3-content page-container">
         <!-- The Grid -->
+        <!-- Title container -->
+        <div class="titolo"><img src="./img/univaq_logo.png" alt="Smiley face" height="108" class="logo">
+        <h1 class="header"> Proposte di tirocinio<br> <p>Università degli studi dell'Aquila</p></h1></div>
+        <!--end Title container -->
         <div class="w3-row">
             <!-- Left Column -->
             <div class="w3-col m3" id="left-column">
